# week-3-assignment

./: Cargo.toml  Dockerfile
src/: fetcher.rs  main.rs
src/db/: config.rs  crud_trait.rs  mod.rs  mongo_db.rs
src/handlers/: hist_handlers.rs  mod.rs
src/models/: allowed_model.rs  history.rs  mod.rs
src/static/: index.html
