[package]
name = "week-3-assignment"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "fetcher"
path = "src/fetcher.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.2.0"
async-trait = "0.1"
futures = "0.3"
actix-web = "4"
dotenv = "0.15"
env_logger = "0.10"

reqwest = { version = "0.11.27", features = ["json", "rustls", "blocking"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
